add: currency plugin